# zodiac_ox

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  init_db.sql  log_config.py  main.py  milvus_client.py  otel_tracer.py  pyproject.toml  redis_client.py
cache/: model_config_cache.py
data/1/: java简历(1)_20260521_232940_36.docx  test_medium_20260522_234649_92.txt  test_upload_20260522_234534_87.txt  测试数据集_20260521_184326_13.xlsx
models/: __init__.py  access_log.py  chat_chunk_detail.py  chat_history.py  chat_trace.py  chunk_config.py  document.py  document_chunk.py  knowledge_base.py  rag_eval_config.py  rag_eval_dataset.py  rag_eval_label_detail.py  rag_eval_label_task.py  rag_eval_question.py  rag_eval_result.py  rag_eval_task.py  system_config.py
routers/: chat.py  document.py  history.py  knowledge_base.py  monitor.py  rag_eval.py  system.py  vector.py
schemas/: chat.py  document.py  knowledge_base.py  monitor.py  rag_eval.py  system.py  vector.py
services/: access_log_service.py  chat_service.py  document_service.py  embedding_service.py  eval_config_service.py  eval_dataset_service.py  eval_engine.py  eval_import_service.py  eval_label_service.py  eval_task_service.py  kb_service.py  memory_service.py  monitor_service.py  ocr_reader.py  parsing_service.py  rag_service.py  ragas_embedding.py  ragas_eval_service.py  sparse_embedding.py  vector_service.py
